I changed his code to use the D3.js site script
I changed his code to use the D3.js site
via http instead of using a local library
so that the svg entry works.

--- a/spirograph.html
+++ b/spirograph.html
@@ -16,7 +16,7 @@
 
   <title>When Life is Linear - Spirograph</title>
 
-  <script src="d3.v3.min.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   
   <style>
     .poly {
@@ -70,7 +70,13 @@
 		</P>
 
   <center>
-  <svg></svg>
+
+<svg>
+</svg>
+
+
+
+
   <p>
     <input type="range" name="rotations" id="rotations" min="1" max="359" value="35">
     <label for="rotations" id="rotationLabel"></label>
@@ -260,4 +266,5 @@ function drawPolys() {
 
 </body>
 </html>
+
 
